--- a/index.html
+++ b/index.html
@@ -3,25 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FormFirst - Your Homepage</title>
+    <title>FormFirst - Your Partner in Digital Solutions</title>
+    <!-- Tailwind CSS CDN for easy styling -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        /* Custom font for a modern look */
         body {
-            font-family: sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-            color: #333;
-        }
-        h1 {
-            color: #0056b3;
+            font-family: "Inter", sans-serif;
         }
     </style>
 </head>
-<body>
-    <h1>Welcome to FormFirst!</h1>
-    <p>This is your new homepage. Start building here!</p>
+<body class="bg-blue-50 min-h-screen flex items-center justify-center p-4">
+
+    <!-- Main container for the page content, now with a two-column grid layout on larger screens -->
+    <div class="bg-white p-8 rounded-lg shadow-xl max-w-4xl w-full text-center lg:text-left grid grid-cols-1 lg:grid-cols-2 gap-8 items-center">
+
+        <!-- Business Blurb Section (Left Column on larger screens) -->
+        <section class="mb-8 lg:mb-0">
+            <h1 class="text-4xl font-extrabold text-indigo-700 mb-4">Welcome to FormFirst!</h1>
+            <p class="text-lg text-gray-700 leading-relaxed">
+                At FormFirst, we specialize in streamlining your digital processes and enhancing your online presence. Whether you're looking to build intuitive forms, create engaging web experiences, or optimize your data collection, our solutions are designed to put your needs first. We believe in crafting efficient and user-friendly tools that empower your business to thrive in the digital landscape.
+            </p>
+        </section>
+
+        <!-- Contact Form Section (Right Column on larger screens) -->
+        <section class="lg:pl-8 lg:border-l lg:border-gray-200">
+            <h2 class="text-2xl font-bold text-indigo-600 mb-6">We'd Love to Hear From You!</h2>
+            <p class="text-md text-gray-600 mb-6">
+                Share your thoughts or let us know how we can help. Provide your email if you'd like us to follow up.
+            </p>
+
+            <!--
+                Important: For this form to work, you need a backend service to process submissions.
+                GitHub Pages is static and cannot process form data directly.
+                A popular free service for static site forms is Formspree (https://formspree.io).
+                Replace "YOUR_FORMSPREE_ENDPOINT" with your actual Formspree endpoint after setting it up.
+                Alternatively, you could use Netlify Forms, Getform, or a custom backend.
+            -->
+            <form action="https://formspree.io/f/mpwldrpp" method="POST" class="space-y-4">
+                <div>
+                    <label for="comment" class="block text-left text-gray-700 text-sm font-medium mb-2">Your Comment:</label>
+                    <textarea id="comment" name="comment" rows="5" class="w-full p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500 transition duration-200 ease-in-out resize-y" placeholder="Tell us what's on your mind..."></textarea>
+                </div>
+                <div>
+                    <label for="email" class="block text-left text-gray-700 text-sm font-medium mb-2">Your Email (Optional):</label>
+                    <input type="email" id="email" name="_replyto" class="w-full p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500 transition duration-200 ease-in-out" placeholder="your.email@example.com">
+                </div>
+                <button type="submit" class="w-full bg-indigo-600 text-white py-3 px-6 rounded-md font-semibold hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50 transition duration-200 ease-in-out shadow-lg transform hover:scale-105">
+                    Send Message
+                </button>
+            </form>
+        </section>
+
+    </div>
+
 </body>
 </html>
