--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
 
         <!-- Business Blurb Section (Left Column on larger screens) -->
         <section class="mb-8 lg:mb-0">
-            <h1 class="text-4xl font-extrabold text-indigo-700 mb-4">Welcome to FormFirst!</h1>
+            <!-- Centering the H1 within its column -->
+            <h1 class="text-4xl font-extrabold text-indigo-700 mb-4 text-center">Welcome to FormFirst!</h1>
             <p class="text-lg text-gray-700 leading-relaxed">
-                At FormFirst, we specialize in streamlining your digital processes and enhancing your online presence. Whether you're looking to build intuitive forms, create engaging web experiences, or optimize your data collection, our solutions are designed to put your needs first. We believe in crafting efficient and user-friendly tools that empower your business to thrive in the digital landscape.
+                At FormFirst, we're pioneering a new approach to athletic improvement. We're opening a dedicated facility featuring an open space equipped with multiple cameras to precisely track and analyze the form of athletes across various sports. Initially focusing on basketball, soccer, and golf, we're open to expanding into popular sports like hockey and baseball. Our core mission is to meticulously track motions with advanced camera technology, compare them against professional techniques and best practices, and identify actionable improvements to perfect an athlete's form.
             </p>
         </section>
 
         <!-- Contact Form Section (Right Column on larger screens) -->
         <section class="lg:pl-8 lg:border-l lg:border-gray-200">
-            <h2 class="text-2xl font-bold text-indigo-600 mb-6">We'd Love to Hear From You!</h2>
+            <h2 class="text-2xl font-bold text-indigo-600 mb-6">Interested in Revolutionizing Your Form?</h2>
             <p class="text-md text-gray-600 mb-6">
-                Share your thoughts or let us know how we can help. Provide your email if you'd like us to follow up.
+                Are you an athlete, coach, or sports enthusiast interested in revolutionizing form improvement? We'd love to connect! Share your thoughts or express your interest in future demos and partnerships. Provide your email if you'd like us to reach out.
             </p>
 
             <!--
@@ -42,8 +43,8 @@
             -->
             <form action="https://formspree.io/f/mpwldrpp" method="POST" class="space-y-4">
                 <div>
-                    <label for="comment" class="block text-left text-gray-700 text-sm font-medium mb-2">Your Comment:</label>
-                    <textarea id="comment" name="comment" rows="5" class="w-full p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500 transition duration-200 ease-in-out resize-y" placeholder="Tell us what's on your mind..."></textarea>
+                    <label for="comment" class="block text-left text-gray-700 text-sm font-medium mb-2">Your Comment/Interest:</label>
+                    <textarea id="comment" name="comment" rows="5" class="w-full p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500 transition duration-200 ease-in-out resize-y" placeholder="Tell us what's on your mind or how you'd like to get involved..."></textarea>
                 </div>
                 <div>
                     <label for="email" class="block text-left text-gray-700 text-sm font-medium mb-2">Your Email (Optional):</label>
