--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FormFirst - Your Partner in Digital Solutions</title>
+    <title>FormFirst - Improving your game from the ground up</title>
     <!-- Tailwind CSS CDN for easy styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -23,7 +23,7 @@
             <!-- Centering the H1 within its column -->
             <h1 class="text-4xl font-extrabold text-indigo-700 mb-4 text-center">Welcome to FormFirst!</h1>
             <p class="text-lg text-gray-700 leading-relaxed">
-                At FormFirst, we're pioneering a new approach to athletic improvement. We're opening a dedicated facility featuring an open space equipped with multiple cameras to precisely track and analyze the form of athletes across various sports. Initially focusing on basketball, soccer, and golf, we're open to expanding into popular sports like hockey and baseball. Our core mission is to meticulously track motions with advanced camera technology, compare them against professional techniques and best practices, and identify actionable improvements to perfect an athlete's form.
+                At FormFirst, we're focused on starting with the basics when it comes to improving as an athlete. We're opening a dedicated facility featuring an open space equipped with multiple cameras to precisely track and analyze the form of athletes across various sports. Our core mission is to meticulously track motions with advanced camera technology, compare them against professional techniques and best practices, and identify actionable improvements to perfect any athlete's form.
             </p>
         </section>
 
@@ -31,7 +31,7 @@
         <section class="lg:pl-8 lg:border-l lg:border-gray-200">
             <h2 class="text-2xl font-bold text-indigo-600 mb-6">Interested in Revolutionizing Your Form?</h2>
             <p class="text-md text-gray-600 mb-6">
-                Are you an athlete, coach, or sports enthusiast interested in revolutionizing form improvement? We'd love to connect! Share your thoughts or express your interest in future demos and partnerships. Provide your email if you'd like us to reach out.
+                Are you an athlete, coach, or sports enthusiast interested in making improvements that will stick? We'd love to connect! Share your thoughts or express your interest in future demos and partnerships. Provide your email if you'd like us to reach out.
             </p>
 
             <!--
