--- a/index.html
+++ b/index.html
@@ -31,23 +31,16 @@
         <section class="lg:pl-8 lg:border-l lg:border-gray-200">
             <h2 class="text-2xl font-bold text-indigo-600 mb-6">Interested in Revolutionizing Your Form?</h2>
             <p class="text-md text-gray-600 mb-6">
-                Are you an athlete, coach, or sports enthusiast interested in making improvements that will stick? We'd love to connect! Share your thoughts or express your interest in future demos and partnerships. Provide your email if you'd like us to reach out.
+                Are you an athlete, coach, or sports enthusiast in Nova Scotia interested in making improvements that will stick? We'd love to connect! Share your thoughts or express your interest in future demos and partnerships. Provide your email if you'd like us to reach out.
             </p>
 
-            <!--
-                Important: For this form to work, you need a backend service to process submissions.
-                GitHub Pages is static and cannot process form data directly.
-                A popular free service for static site forms is Formspree (https://formspree.io).
-                Replace "YOUR_FORMSPREE_ENDPOINT" with your actual Formspree endpoint after setting it up.
-                Alternatively, you could use Netlify Forms, Getform, or a custom backend.
-            -->
             <form action="https://formspree.io/f/mpwldrpp" method="POST" class="space-y-4">
                 <div>
                     <label for="comment" class="block text-left text-gray-700 text-sm font-medium mb-2">Your Comment/Interest:</label>
                     <textarea id="comment" name="comment" rows="5" class="w-full p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500 transition duration-200 ease-in-out resize-y" placeholder="Tell us what's on your mind or how you'd like to get involved..."></textarea>
                 </div>
                 <div>
-                    <label for="email" class="block text-left text-gray-700 text-sm font-medium mb-2">Your Email (Optional):</label>
+                    <label for="email" class="block text-left text-gray-700 text-sm font-medium mb-2">Your Email:</label>
                     <input type="email" id="email" name="_replyto" class="w-full p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500 transition duration-200 ease-in-out" placeholder="your.email@example.com">
                 </div>
                 <button type="submit" class="w-full bg-indigo-600 text-white py-3 px-6 rounded-md font-semibold hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50 transition duration-200 ease-in-out shadow-lg transform hover:scale-105">
